# lsm303agr-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  memory.x
.cargo/: config.toml
.github/workflows/: build.yml  test.yml
examples/: linux.rs  microbit-v2.rs
src/: accel_mode_and_odr.rs  delay.md  device_impl.rs  interface.rs  lib.rs  mag_mode_change.rs  magnetometer.rs  read_sensor_data.rs  register_address.rs  types.rs
tests/: accel_mode_and_odr.rs  integration.rs  mag_mode_change.rs  magnetometer.rs  odr.rs  read_accel.rs  status.rs  temp_sensor.rs  temperature_sensor.rs
tests/common/: mod.rs
