[package]
name = "lsm303agr"
version = "0.3.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/lsm303agr-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the LSM303AGR ultra-compact high-performance eCompass module: ultra-low-power 3D accelerometer and 3D magnetometer."
readme = "README.md"
keywords = ["accelerometer", "magnetometer", "mems", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/lsm303agr-rs"
documentation = "https://docs.rs/lsm303agr"
edition = "2018"

[dependencies]
embedded-hal = "1.0.0"
nb = "1.1"
bitflags = "2.3.3"

[dev-dependencies]
embedded-hal-mock = { version = "0.10", default-features = false, features = ["eh1"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.4.0"

[profile.release]
lto = true
