[package]
name = "lsm303agr"
version = "1.0.0"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/lsm303agr-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the LSM303AGR ultra-compact high-performance eCompass module: ultra-low-power 3D accelerometer and 3D magnetometer."
readme = "README.md"
keywords = ["accelerometer", "magnetometer", "mems", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/lsm303agr-rs"
documentation = "https://docs.rs/lsm303agr"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
nb = "1.1"
bitflags = "2.3.3"
embedded-hal-async = { version = "1.0.0", optional = true }
maybe-async-cfg = "0.2.4"

# Test dependencies
[target.'cfg(not(target_os = "none"))'.dev-dependencies]
embedded-hal-mock = { version = "0.11", default-features = false, features = ["eh1", "embedded-hal-async"] }

# Dependencies for the linux example
[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.4.0"

# Dependencies for the microbit-v2 example
[target.'cfg(target_os = "none")'.dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embassy-nrf = { version = "0.1.0", features = ["nrf52833", "time-driver-rtc1", "time"] }
rtt-target = "0.5.0"
embedded-hal-async = "1.0.0"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = "0.3.1"
panic-rtt-target = "0.1.3"

[features]
async = ["dep:embedded-hal-async"]

[profile.release]
lto = true

[[example]]
name = "microbit-v2"
test = false
bench = false
required-features = ["async"]
